# fluctus

./: .editorconfig  .gitignore  .gitmodules  BUILDING.md  CMakeLists.txt  LICENSE.md  Makefile  README.md  cltrace.sln  cltrace.vcxproj  contributors.txt  fluctus.sln  fluctus.vcxproj  linux_install.txt  plot_benchmarks.py  settings_default.json  shell.nix
assets/: teapot.ply
assets/conference/: authors.txt  conference.mtl
assets/country_kitchen/: Country-Kitchen.mtl  authors.txt
assets/egyptcat/: authors.txt  egyptcat.mtl
assets/env_maps/: night.hdr
assets/gold_rings/: gold_rings_bark.mtl
assets/luxball/: luxball.mtl
assets/psor/: psor-cube.mtl
cmake/: CompileSpirvShader.cmake  FindOptiX.cmake
data/kernel_binaries/: assemble.py
dependencies/windows/glfw/Win32/lib-vc2010/: glfw3.lib  glfw3dll.lib
dependencies/windows/glfw/Win32/lib-vc2012/: glfw3.lib  glfw3dll.lib
dependencies/windows/glfw/x64/lib-vc2012/: glfw3.lib  glfw3dll.lib
dependencies/windows/glfw/x64/lib-vc2013/: glfw3.lib
ext/: CMakeLists.txt
ext/VulkanFW/: AndroidNativeApp.hpp  CMakeLists.txt  android.cpp  android.hpp  camera.hpp  common.hpp  compute.hpp  easings.hpp  frustum.hpp  gl.cpp  heightmap.hpp  keycodes.hpp  new_camera.hpp  pbr.cpp  pbr.hpp  shapes.cpp  shapes.h  shapesRenderer.hpp  ui.cpp  ui.hpp  utils.cpp  vulkanExampleBase.cpp  vulkanExampleBase.h  vulkanGear.cpp  vulkanGear.h  vulkanOffscreenExampleBase.hpp
ext/VulkanFW/glfw/: glfw.cpp
ext/VulkanFW/vks/: context.hpp  debug.cpp  framebuffer.hpp  model.hpp  storage.hpp  texture.hpp  version.hpp  vks.cpp
ext/VulkanFW/vr/: oculus.hpp  vr_common.hpp
ext/glad/: CMakeLists.txt
ext/glad/include/glad/: glad.h
ext/glad/src/: glad.c
include/: cl2.hpp
include/math/: float2.hpp  float3.hpp  int3.hpp  matrix.hpp
shaders/: compile_glsl.bat  diffuse.rchit  miss_primary.rmiss  miss_shadow.rmiss  raygen.rgen  shadow_blocker.rahit  shadow_blocker.rchit  utils.glh  utils.glsl
src/: BMFRDenoiser.cpp  BMFRDenoiser.hpp  Denoiser.hpp  GLProgram.cpp  GLProgram.hpp  HWAccelerator.cpp  HWAccelerator.hpp  Kernel.cpp  Kernel.hpp  OptixDenoiser.cpp  OptixDenoiser.hpp  bvh.cl  bvh.cpp  bvh.hpp  bvhnode.cpp  bvhnode.hpp  bxdf.cl  bxdf_partial.cl  bxdf_types.h  clcontext.cpp  clcontext.hpp  diffuse.cl  env_map.cl  envmap.cpp  envmap.hpp  fresnel.cl  geom.h  ggx.cl  glossy.cl  ideal_conductor.cl  ideal_dielectric.cl  ideal_reflection.cl  intersect.cl  kernel.cl  kernel_impl.hpp  kernel_monolith.cl  kernel_pick.cl  kernelreader.cpp  kernelreader.hpp  main.cpp  (+46 more)
src/VulkanFW/glfw/: glfw.hpp
src/VulkanFW/vks/: context.hpp  debug.cpp  filesystem.cpp  framebuffer2.hpp  model.cpp  offscreen.hpp  pipelines.hpp  renderpass.hpp  storage.cpp  swapchain.hpp  vks.hpp  vku.hpp
src/bmfr/: CMakeLists.txt  bmfr.cl  bmfr.cpp
src/bmfr/CLUtils/: CLUtils.hpp
src/bmfr/CLUtils/CL/: cl2.hpp
src/denoiser/: OptixDenoiser.cpp  OptixDenoiser.hpp
src/rgbe/: rgbe.cpp  rgbe.hpp
